--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,64 @@
 version: '3.8'
 
 services:
+  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
+    container_name: nigeria-geo-db
     environment:
       POSTGRES_DB: nigeria_geo
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: nigeria_user
+      POSTGRES_PASSWORD: nigeria_password
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./migrations:/docker-entrypoint-initdb.d
+      - ./scripts:/scripts
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U nigeria_user -d nigeria_geo"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - nigeria-geo-network
 
-  app:
+  # Nigeria Geo API
+  api:
     build: .
-    ports:
-      - "3000:3000"
+    container_name: nigeria-geo-api
     environment:
-      DATABASE_URL: postgresql://postgres:password@postgres:5432/nigeria_geo
+      DATABASE_URL: postgres://nigeria_user:nigeria_password@postgres:5432/nigeria_geo
+      RUST_LOG: info
       SERVER_HOST: 0.0.0.0
       SERVER_PORT: 3000
-      RUST_LOG: info
+    ports:
+      - "3000:3000"
     depends_on:
       postgres:
         condition: service_healthy
+    networks:
+      - nigeria-geo-network
+    restart: unless-stopped
+
+  # Redis (for future caching)
+  redis:
+    image: redis:7-alpine
+    container_name: nigeria-geo-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - nigeria-geo-network
     restart: unless-stopped
 
 volumes:
   postgres_data:
+    driver: local
+  redis_data:
+    driver: local
+
+networks:
+  nigeria-geo-network:
+    driver: bridge
