--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ serde_json = "1.0"
 # Database
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
 
+# Redis & Caching
+redis = { version = "0.24", features = ["tokio-comp", "json"] }
+
 # Authentication & Security
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
