--- a/mobile-sdks/react-native/example/package.json
+++ b/mobile-sdks/react-native/example/package.json
@@ -15,8 +15,7 @@
     "nigeria-geo-sdk": "file:../sdk",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-paper": "^5.14.5",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-paper": "^5.14.5"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
