feat: uploaded data to production db

--- a/.env
+++ b/.env
@@ -1,32 +1,48 @@
-# Database Configuration
-DATABASE_URL=postgres://nigeria_user:nigeria_password@localhost:5432/nigeria_geo
+# Database Configuration (Production)
+DATABASE_URL=postgres://mubarak:TafawaBalewa123!@prod-3609ja.postgres.database.azure.com:5432/postgres
 
 # Server Configuration
-SERVER_HOST=127.0.0.1
+SERVER_HOST=0.0.0.0
 SERVER_PORT=3000
 
 # Logging Configuration
-RUST_LOG=info
+RUST_LOG=warn
 
-# Redis Configuration (for future caching)
-REDIS_URL=redis://localhost:6379
+# Redis Configuration (Production)
+REDIS_URL=redis://your-redis-host:6379
 
 # API Configuration
 API_VERSION=v1
 API_PREFIX=/api
 
 # CORS Configuration
-CORS_ORIGIN=*
+CORS_ORIGIN=http://20.63.52.179:3000,http://localhost:3000
 CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
-CORS_HEADERS=*
+CORS_HEADERS=Content-Type,Authorization
 
-# Rate Limiting (for future implementation)
-RATE_LIMIT_REQUESTS=100
+# Rate Limiting
+RATE_LIMIT_REQUESTS=1000
 RATE_LIMIT_WINDOW=60
 
-# Security (for future implementation)
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRY=3600
+# Security
+JWT_SECRET=prod-super-secure-jwt-key-change-this-in-production
+JWT_EXPIRY=1800
+
+# Production Settings
+ENVIRONMENT=production
+API_BASE_URL=http://20.63.52.179:3000
+
+# Deployment Configuration
+BIND_ADDRESS=0.0.0.0:3000
+MAX_CONNECTIONS=1000
+WORKER_THREADS=4
+
+# SSL/TLS (if terminating SSL at application level)
+# SSL_CERT_PATH=/path/to/cert.pem
+# SSL_KEY_PATH=/path/to/private.key
+
+# Health Check
+HEALTH_CHECK_PATH=/health
 
 # External APIs (for future integration)
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
