fix: redis configuration

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ SERVER_PORT=3000
 RUST_LOG=warn
 
 # Redis Configuration (Production)
-REDIS_URL=redis://your-redis-host:6379
+REDIS_URL=redis://20.63.52.179:6379
 
 # API Configuration
 API_VERSION=v1
@@ -24,9 +24,7 @@ CORS_HEADERS=Content-Type,Authorization
 RATE_LIMIT_REQUESTS=1000
 RATE_LIMIT_WINDOW=60
 
-# Security
-JWT_SECRET=prod-super-secure-jwt-key-change-this-in-production
-JWT_EXPIRY=1800
+
 
 # Production Settings
 ENVIRONMENT=production
@@ -43,6 +41,15 @@ WORKER_THREADS=4
 
 # Health Check
 HEALTH_CHECK_PATH=/health
+
+# Security Configuration
+SECURE_HEADERS=true
+CSP_ENABLED=true
+HSTS_MAX_AGE=31536000
+
+# Monitoring & Metrics
+METRICS_ENABLED=true
+HEALTH_CHECK_INTERVAL=30
 
 # External APIs (for future integration)
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
