Remove .env from tracking and add .env.example template
- Remove sensitive .env file from Git tracking
- Add .env.example as template for environment variables
- Protect production credentials and API keys

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration (Production)
-DATABASE_URL=postgres://mubarak:TafawaBalewa123!@prod-3609ja.postgres.database.azure.com:5432/postgres
+DATABASE_URL=postgres://username:password@your-db-host:5432/database_name
 
 # Server Configuration
 SERVER_HOST=0.0.0.0
@@ -9,14 +9,14 @@ SERVER_PORT=3000
 RUST_LOG=warn
 
 # Redis Configuration (Production)
-REDIS_URL=redis://20.63.52.179:6379
+REDIS_URL=redis://your-redis-host:6379
 
 # API Configuration
 API_VERSION=v1
 API_PREFIX=/api
 
 # CORS Configuration
-CORS_ORIGIN=http://20.63.52.179:3000,http://localhost:3000
+CORS_ORIGIN=http://your-domain.com,http://localhost:3000
 CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
 CORS_HEADERS=Content-Type,Authorization
 
@@ -24,11 +24,13 @@ CORS_HEADERS=Content-Type,Authorization
 RATE_LIMIT_REQUESTS=1000
 RATE_LIMIT_WINDOW=60
 
-
+# Security
+JWT_SECRET=your-super-secure-jwt-key-change-this-in-production
+JWT_EXPIRY=1800
 
 # Production Settings
 ENVIRONMENT=production
-API_BASE_URL=http://20.63.52.179:3000
+API_BASE_URL=http://your-domain.com:3000
 
 # Deployment Configuration
 BIND_ADDRESS=0.0.0.0:3000
